[gd_scene load_steps=5 format=2]

[ext_resource path="res://Texturas/Dado.png" type="Texture" id=1]
[ext_resource path="res://Cenas/SaidaNoh.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Scripts/Entrada.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 93.4648, 64.9821 )

[node name="Entrada" type="Area2D" groups=["entrada"]]
z_index = 1
script = ExtResource( 3 )

[node name="Rapidez" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -93.0
margin_top = -65.0
margin_right = 93.0
margin_bottom = 65.0
mouse_filter = 2
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Propriedade1" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -59, 0 )
texture = ExtResource( 1 )

[node name="QuantidadeP1" type="Label" parent="."]
margin_left = -75.0
margin_top = 18.0
margin_right = -43.0
margin_bottom = 32.0
size_flags_horizontal = 2
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Propriedade2" type="Sprite" parent="."]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( -10, 0 )
texture = ExtResource( 1 )

[node name="QuantidadeP2" type="Label" parent="."]
margin_left = -26.0
margin_top = 18.0
margin_right = 6.0
margin_bottom = 32.0
size_flags_horizontal = 2
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Propriedade3" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 39, 0 )
texture = ExtResource( 1 )

[node name="QuantidadeP3" type="Label" parent="."]
margin_left = 23.0
margin_top = 18.0
margin_right = 55.0
margin_bottom = 32.0
size_flags_horizontal = 2
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saida" parent="." instance=ExtResource( 2 )]
position = Vector2( 79, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0273438, -0.0304298 )
shape = SubResource( 1 )

[connection signal="timeout" from="Rapidez" to="." method="_on_Rapidez_timeout"]
